--- a/Slug Fest Test/Slug Fest (basics)/Slug Fest (basics).csproj
+++ b/Slug Fest Test/Slug Fest (basics)/Slug Fest (basics).csproj
@@ -43,10 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attack.cs" />
+    <Compile Include="Body.cs" />
     <Compile Include="Fighter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stage.cs" />
     <Compile Include="Stance.cs" />
+    <Compile Include="Values.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
